test: 补充单元测试覆盖率至 Line 95.5% / Branch 90.1%
新增 10 个测试文件 + 扩展 3 个现有测试，共 134 个测试方法：
- 新增: ContextFillFilterUTest(10) IpUtilsUTest(11) SpringContextUtilsUTest(14)
  MyMetaObjectHandlerUTest(6) SystemConfigConverterUTest(7) UserRepositoryImplUTest(7)
  SystemConfigFacadeImplUTest(12) BaseRequestUTest(3) BasePageRequestUTest(16)
  ConfigKeyDisplayNameUTest(22)
- 扩展: KryoSerializerUTest(15→26) ContextCallableUTest(2→10)
  LoggingConfigureDirectoryUTest(5→11)

全量 475 tests 全通过，覆盖率门控 Line≥95% Branch≥90% 达标